Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.8.2
-
None
-
-
837810f66 (dev), 7107fa2e8 (6.9)
Description
running qtcreator on my linux workstation occasionally crashes for me (ubuntu 24.10, kde, nvidia):
the crash comes from (no debug symbols unfortunately)
#0 0x00007937e33bd1e3 in QtWaylandClient::QWaylandShmBackingStore::flush(QWindow*, QRegion const&, QPoint const&) () from /home/tim/bin/qt-6.8/plugins/platforms/../../lib/libQt6WaylandClient.so.6 [Current thread is 1 (Thread 0x7937e64249c0 (LWP 260589))] (gdb) bt #0 0x00007937e33bd1e3 in QtWaylandClient::QWaylandShmBackingStore::flush(QWindow*, QRegion const&, QPoint const&) () at /home/tim/bin/qt-6.8/plugins/platforms/../../lib/libQt6WaylandClient.so.6 #1 0x00007937e79bad09 in QBackingStore::flush(QRegion const&, QWindow*, QPoint const&) () at /home/tim/bin/qt-6.8/lib/libQt6Gui.so.6 #2 0x00007937e835fa35 in QWidgetRepaintManager::flush(QWidget*, QRegion const&, QPlatformTextureList*) () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #3 0x00007937e83626db in QWidgetRepaintManager::flush() () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #4 0x00007937e836189a in QWidgetRepaintManager::paintAndFlush() () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #5 0x00007937e835f34a in QWidgetRepaintManager::sync(QWidget*, QRegion const&) () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #6 0x00007937e83697f4 in QWidgetWindow::handleExposeEvent(QExposeEvent*) () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #7 0x00007937e8366144 in QWidgetWindow::event(QEvent*) () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #8 0x00007937e82e880d in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #9 0x00007937e82e9966 in QApplication::notify(QObject*, QEvent*) () at /home/tim/bin/qt-6.8/lib/libQt6Widgets.so.6 #10 0x00007937e6d0fbff in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /home/tim/bin/qt-6.8/lib/libQt6Core.so.6 #11 0x00007937e79311da in QGuiApplicationPrivate::processExposeEvent(QWindowSystemInterfacePrivate::ExposeEvent*) () at /home/tim/bin/qt-6.8/lib/libQt6Gui.so.6 #12 0x00007937e79a235a in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/tim/bin/qt-6.8/lib/libQt6Gui.so.6 #13 0x00007937e7e6f1a1 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /home/tim/bin/qt-6.8/lib/libQt6Gui.so.6 #14 0x00007937e7110397 in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #15 0x00007937e7170dc7 in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #16 0x00007937e710f8b3 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #17 0x00007937e70267de in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/tim/bin/qt-6.8/lib/libQt6Core.so.6 #18 0x00007937e6d1cb96 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/tim/bin/qt-6.8/lib/libQt6Core.so.6 #19 0x00007937e6d103fb in QCoreApplication::exec() () at /home/tim/bin/qt-6.8/lib/libQt6Core.so.6 #20 0x0000651ba2cf84f5 in main ()
debug output with WAYLAND_DEBUG=1
[1857417.380] {Display Queue} wl_display#1.delete_id(53)
[1857419.101] -> wl_surface#42.frame(new id wl_callback#53)
[1857419.111] {Default Queue} -> wl_surface#42.offset(0, 0)
[1857419.113] {Default Queue} -> wl_surface#42.attach(wl_buffer#47, 0, 0)
[1857419.116] {Default Queue} -> wl_surface#42.damage_buffer(758, 102, 2328, 724)
[1857419.118] {Default Queue} -> wl_surface#42.commit()
[1857419.254] {Default Queue} xdg_popup#67.repositioned(1)
[1857419.258] {Default Queue} xdg_popup#67.repositioned(2)
[1857419.259] {Default Queue} wl_surface#57.preferred_buffer_scale(2)
[1857419.267] {Default Queue} -> wp_viewport#68.set_destination(82, 91)
[1857419.268] {Default Queue} wl_surface#57.preferred_buffer_transform(0)
[1857419.270] {Default Queue} -> wl_surface#57.set_buffer_transform(0)
[1857419.272] {Default Queue} xdg_popup#67.configure(688, 225, 82, 91)
[1857419.274] {Default Queue} xdg_surface#56.configure(82516)
[1857419.277] {Default Queue} -> wp_viewport#68.set_destination(82, 91)
[1857419.280] {Default Queue} -> xdg_surface#56.ack_configure(82516)
[1857419.281] {Default Queue} -> xdg_surface#56.set_window_geometry(0, 0, 82, 91)
[1857419.301] {Default Queue} -> xdg_popup#67.destroy()
[1857419.303] {Default Queue} -> xdg_surface#56.destroy()
[1857419.305] {Default Queue} -> wl_surface#57.destroy()
[1857419.309] {Default Queue} -> wp_viewport#68.destroy()
[1857422.044] {Default Queue} -> wl_surface#42.offset(0, 0)
[1857422.058] {Default Queue} -> wl_surface#42.attach(wl_buffer#61, 0, 0)
[1857422.061] {Default Queue} -> wl_surface#42.damage_buffer(3086, 102, 28, 498)
[1857422.064] {Default Queue} -> wl_surface#42.damage_buffer(3646, 102, 1474, 498)
[1857422.066] {Default Queue} -> wl_surface#42.damage_buffer(3086, 600, 28, 90)
[1857422.068] {Default Queue} -> wl_surface#42.damage_buffer(3086, 690, 28, 136)
[1857422.070] {Default Queue} -> wl_surface#42.damage_buffer(3646, 690, 1474, 136)
[1857422.072] {Default Queue} -> wl_surface#42.commit()
[1] 260589 segmentation fault (core dumped)
Attachments
Issue Links
- is duplicated by
-
QDS-14838 QDS crashes when dropping any component into scene tree
-
- Closed
-
- relates to
-
QTBUG-136588 Qt Creator crashes in the debugging mode on Wayland
-
- Closed
-
For Gerrit Dashboard: QTBUG-134234 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
640339,8 | client: Use separate queue for SHM buffers | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
642663,3 | client: Use separate queue for SHM buffers | 6.9 | qt/qtwayland | Status: MERGED | +2 | -1 |