src/client/qwaylanddisplay_p.h
@@ -274,7 +274,6 @@ public:
     void initEventThread();
 
 public Q_SLOTS:
-    void blockingReadEvents();
     void flushRequests();
 
 Q_SIGNALS:
